bin/testsuite/tests/compiler/src/errors/compiler1878.swg
#global testerror "Err0494"

struct(T) AA
{
    @print("toto")
}